<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ChatActivity">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent"
            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/iv_back_arrow"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/_4sdp"
                    android:layout_height="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:src="@drawable/circle" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:fontFamily="@font/rubik"
                    android:text="@string/online"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_9ssp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layout_constraintBottom_toTopOf="@+id/edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <androidx.cardview.widget.CardView
                android:id="@+id/suggestion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:backgroundTint="@color/gray_light"
                app:cardCornerRadius="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <TextView
                    android:id="@+id/tv_suggestion1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_20sdp"
                    android:fontFamily="@font/rubik"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/explain_quantum_computing_in_simple_terms"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintTop_toBottomOf="@+id/view" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/suggestion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:backgroundTint="@color/gray_light"
                app:cardCornerRadius="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/suggestion1">

                <TextView
                    android:id="@+id/tv_suggestion2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_20sdp"
                    android:fontFamily="@font/rubik"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/got_any_creative_ideas_for_a_10_year_old_s_birthday"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintTop_toBottomOf="@+id/view" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/suggestion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:backgroundTint="@color/gray_light"
                app:cardCornerRadius="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/suggestion2">

                <TextView
                    android:id="@+id/tv_suggestion3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_20sdp"
                    android:fontFamily="@font/rubik"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/how_do_i_make_an_http_request_in_javascript"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintTop_toBottomOf="@+id/view" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/rubik"
            android:hint="@string/write_your_message"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >


        </EditText>

        <ImageView
            android:id="@+id/iv_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_send"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_text"
            app:tint="@color/gray" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewLoadingWavy"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@color/gray_light"
            android:layout_marginEnd="@dimen/_25sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_text">

            <com.razzaghimahdi78.dotsloading.linear.LoadingWavy
                android:id="@+id/loadingWavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:dots_color="@color/gray"
                app:dots_count="3"
                app:dots_duration="500"
                app:dots_size="medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>