<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ImageDetailActivity">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent"  />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp"
                android:scaleType="fitXY" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:backgroundTint="@color/gray_light"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@+id/card_view"
            app:layout_constraintStart_toStartOf="@+id/card_view"
            app:layout_constraintTop_toBottomOf="@+id/card_view">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:fontFamily="@font/rubik"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/download"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12ssp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:backgroundTint="@color/green_light"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@+id/btn_download"
            app:layout_constraintStart_toStartOf="@+id/btn_download"
            app:layout_constraintTop_toBottomOf="@+id/btn_download">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:fontFamily="@font/rubik"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/share"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12ssp" />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>